5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4271/executions/1756_1185.log
== TEST (2019-05-23 15:51:00) 
-- CODE:
from numpy import *
vetor = array(eval(input("vetor: ")))
i = 0
cont = 0
while (i < size(vetor)): 
	if(vetor(i) > 99mg/dl)







-- ERROR:
File "XXXX", line 6
    if(vetor(i) > 99mg/dl)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 15:54:37) 
-- CODE:
from numpy import *
vetor = array(eval(input("vetor: ")))

i = 0
cont = 0
while (i < size(vetor)): 
	if(vetor(i) > 99mg/dl)
		cont = cont + 1
		print(i)
	i = i + 1
print(cont)






-- ERROR:
File "XXXX", line 7
    if(vetor(i) > 99mg/dl)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 15:58:23) 
-- CODE:
from numpy import *
vetor = array([99mg/dl])
i = 0
cont = 0
while (i < size(vetor)): 
	if(vetor(i) > )
		cont = cont + 1
		print(i)
	i = i + 1
print(cont)






-- ERROR:
File "XXXX", line 2
    vetor = array([99mg/dl])
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 15:58:38) 
-- CODE:
from numpy import *
vetor = array([99mg/dl])
i = 0
cont = 0
while (i < size(vetor)): 
	if(vetor(i) > vetor )
		cont = cont + 1
		print(i)
	i = i + 1
print(cont)






-- ERROR:
File "XXXX", line 2
    vetor = array([99mg/dl])
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 15:59:04) 
-- CODE:
from numpy import *
vetor = array(['99mg/dl"])
i = 0
cont = 0
while (i < size(vetor)): 
	if(vetor(i) > vetor )
		cont = cont + 1
		print(i)
	i = i + 1
print(cont)






-- ERROR:
File "XXXX", line 2
    vetor = array(['99mg/dl"])
                             ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 15:59:28) 
-- CODE:
from numpy import *
vetor = array('99mg/dl")
i = 0
cont = 0
while (i < size(vetor)): 
	if(vetor(i) > vetor )
		cont = cont + 1
		print(i)
	i = i + 1
print(cont)






-- ERROR:
File "XXXX", line 2
    vetor = array('99mg/dl")
                           ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 15:59:37) 
-- CODE:
from numpy import *
vetor = array("99mg/dl")
i = 0
cont = 0
while (i < size(vetor)): 
	if(vetor(i) > vetor )
		cont = cont + 1
		print(i)
	i = i + 1
print(cont)






-- ERROR:
File "XXXX", line 6
    if(vetor(i) > vetor )
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:01:04) 
-- CODE:
from numpy import *
vetor = array("99mg/dl")
i = 0
cont = 0
while (i < size(vetor)): 
	if(vetor(i) > 99mg/dl )
		cont = cont + 1
		print(i)
	i = i + 1
print(cont)






-- ERROR:
File "XXXX", line 6
    if(vetor(i) > 99mg/dl )
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:05:36) 
-- CODE:
from numpy import *
vetor = array("99mg/dl")
i = 0
cont = 0
while (i < size(vetor)): 
	if(vetor(i) > 99mg/dl )
		cont = cont + 1
		print(i)
	i = i + 1
print(cont)






-- ERROR:
File "XXXX", line 6
    if(vetor(i) > 99mg/dl )
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 16:05:43) 
-- CODE:
from numpy import *
vetor = array("99mg/dl")
i = 0
cont = 0
while (i < size(vetor)): 
	if(vetor(i) > 99mg/dl )
		cont = cont + 1
		print(i)
	i = i + 1
print(cont)






-- EXECUTION TIME:
0.137276
-- ERROR:
  File "/home/codebench/codes/1756/1185/main.py", line 6
    if(vetor(i) > 99mg/dl )
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:05:51) 
-- CODE:
from numpy import *
vetor = array("99mg/dl")
i = 0
cont = 0
while (i < size(vetor)): 
	if(vetor(i) > 99mg/dl)
		cont = cont + 1
		print(i)
	i = i + 1
print(cont)






-- ERROR:
File "XXXX", line 6
    if(vetor(i) > 99mg/dl)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 16:06:02) 
-- CODE:
from numpy import *
vetor = array("99mg/dl")
i = 0
cont = 0
while (i < size(vetor)): 
	if(vetor(i) > 99)
		cont = cont + 1
		print(i)
	i = i + 1
print(cont)






-- EXECUTION TIME:
0.141109
-- ERROR:
  File "/home/codebench/codes/1756/1185/main.py", line 6
    if(vetor(i) > 99)
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:06:04) 
-- CODE:
from numpy import *
vetor = array("99mg/dl")
i = 0
cont = 0
while (i < size(vetor)): 
	if(vetor(i) > 99)
		cont = cont + 1
		print(i)
	i = i + 1
print(cont)






-- ERROR:
File "XXXX", line 6
    if(vetor(i) > 99)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 16:06:04) 
-- CODE:
from numpy import *
vetor = array("99mg/dl")
i = 0
cont = 0
while (i < size(vetor)): 
	if(vetor(i) > 99)
		cont = cont + 1
		print(i)
	i = i + 1
print(cont)






-- EXECUTION TIME:
0.138701
-- ERROR:
  File "/home/codebench/codes/1756/1185/main.py", line 6
    if(vetor(i) > 99)
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:12:21) 
-- CODE:
from numpy import *
vetor = array(eval(input("vetor: ")))

i = 0
cont = 0
while (i < size(vetor)): 
	if(vetor(i) > 99mg/dl)
		cont = cont + 1
		print(i)
	i = i + 1






-- ERROR:
File "XXXX", line 7
    if(vetor(i) > 99mg/dl)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:13:30) 
-- CODE:
from numpy import *
vetor = array(eval(input("vetor: ")))
i = 0
cont = 0
while (i < size(vetor)): 
	if(vetor(i) > 99)
	cont = cont + 1






-- ERROR:
File "XXXX", line 6
    if(vetor(i) > 99)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:14:02) 
-- CODE:
from numpy import *
vetor = array(eval(input("vetor: ")))
i = 0
cont = 0
while (i < size(vetor)): 
	if(99 < vetor(i)
	cont = cont + 1






-- ERROR:
File "XXXX", line 7
    cont = cont + 1
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:14:30) 
-- CODE:
from numpy import *
vetor = array(eval(input("vetor: ")))
i = 0
cont = 0
while (i < size(vetor)): 
	if(99 < vetor(i)
		cont = cont + 1






-- ERROR:
File "XXXX", line 7
    cont = cont + 1
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:14:51) 
-- CODE:
from numpy import *
vetor = array(eval(input("vetor: ")))
i = 0
cont = 0
while (i < size(vetor)): 
	if(99 < vetor(i)
		i = i + 1






-- ERROR:
File "XXXX", line 7
    i = i + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
